--- a/stargate/StargateShapeDesigner.form
+++ b/stargate/StargateShapeDesigner.form
@@ -965,6 +965,9 @@
                     <Property name="text" type="java.lang.String" value="Schild mit Name"/>
                     <Property name="name" type="java.lang.String" value="N" noResource="true"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="arAttributeInBlockElement"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JRadioButton" name="activationSwitch">
                   <Properties>
@@ -974,6 +977,9 @@
                     <Property name="text" type="java.lang.String" value="Aktivierungs Schalter"/>
                     <Property name="name" type="java.lang.String" value="A" noResource="true"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="arAttributeInBlockElement"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JRadioButton" name="signDialer">
                   <Properties>
@@ -984,6 +990,9 @@
                     <Property name="toolTipText" type="java.lang.String" value=""/>
                     <Property name="name" type="java.lang.String" value="D" noResource="true"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="arAttributeInBlockElement"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JRadioButton" name="irisActivationSwitch">
                   <Properties>
@@ -993,6 +1002,9 @@
                     <Property name="text" type="java.lang.String" value="Iris Aktivierungs Schalter"/>
                     <Property name="name" type="java.lang.String" value="IA" noResource="true"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="arAttributeInBlockElement"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JRadioButton" name="teleportPlayer">
                   <Properties>
@@ -1002,6 +1014,9 @@
                     <Property name="text" type="java.lang.String" value="Teleport Spieler"/>
                     <Property name="name" type="java.lang.String" value="EP" noResource="true"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="arAttributeInBlockElement"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JRadioButton" name="teleportMinecart">
                   <Properties>
@@ -1011,6 +1026,9 @@
                     <Property name="text" type="java.lang.String" value="Teleport Minecart"/>
                     <Property name="name" type="java.lang.String" value="EM" noResource="true"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="arAttributeInBlockElement"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JCheckBox" name="light">
                   <Properties>
