--- a/stargate/StargateShapeDesigner.form
+++ b/stargate/StargateShapeDesigner.form
@@ -71,7 +71,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="light_material_label" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="752" max="32767" attributes="0"/>
+                              <EmptySpace pref="787" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
@@ -118,7 +118,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jButton4" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="671" max="32767" attributes="0"/>
+                              <EmptySpace pref="706" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -367,7 +367,7 @@
                               <Component id="jSeparator3" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="AttributePanel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="8" max="32767" attributes="0"/>
+                              <EmptySpace pref="43" max="32767" attributes="0"/>
                               <Component id="LayerPanel" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="fieldPanel" alignment="1" max="32767" attributes="0"/>
@@ -381,11 +381,7 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="60" pref="60" max="60" attributes="0"/>
-                              <Component id="jSeparator3" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jSeparator3" min="-2" max="-2" attributes="0"/>
                           <Component id="BlockPanel" min="-2" max="-2" attributes="0"/>
                           <Component id="AttributePanel" min="-2" max="-2" attributes="0"/>
                           <Component id="LayerPanel" min="-2" max="-2" attributes="0"/>
@@ -1087,7 +1083,7 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <EmptySpace min="0" pref="806" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="841" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
@@ -1111,7 +1107,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="826" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="861" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -1138,6 +1134,31 @@
               </SubComponents>
             </Container>
           </SubComponents>
+        </Container>
+        <Container class="stargate.ShapePreviewPanel" name="shapePreviewPanel">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new stargate.ShapePreviewPanel(fieldPanel.getField())"/>
+          </AuxValues>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
+              <JTabbedPaneConstraints tabName="3D Ansicht">
+                <Property name="tabTitle" type="java.lang.String" value="3D Ansicht"/>
+              </JTabbedPaneConstraints>
+            </Constraint>
+          </Constraints>
+
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace min="0" pref="861" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace min="0" pref="508" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+          </Layout>
         </Container>
       </SubComponents>
     </Container>
